# cnorxz

./: .gitignore  .gitlab-ci.yml  .woodpecker.yml  CMakeLists.txt  LICENSE  README.md  TODO
src/: CMakeLists.txt  anonymous_range.cc  anonymous_range.h  arith.h  base_def.h  block.cc  block.h  container_range.cc  container_range.h  helper_tools.h  index_base.cc  index_base.h  index_unit_test.cc  ma_functional.cc  ma_functional.h  ma_unit_test.cc  manipulator.cc  manipulator.h  mbase_def.h  me.cc  me.h  multi_array.cc  multi_array.h  multi_array_header.h  multi_array_operation.cc  multi_array_operation.h  multi_range.cc  multi_range.h  name.cc  name.h  name_map.txt  op_unit_test.cc  operation_utils.cc  operation_utils.h  pack_num.h  range_base.cc  range_base.h  range_factory.cc  range_factory.h  range_transformer.cc  (+8 more)
src/block/: bbase_def.h  block.h
src/include/: access.cc.h  access.h  allocator.h  allocator.h~  arith.cc.h  arith.h  base_def.h  basic_types.h  cnorxz.cc.h  cnorxz.h  container_index.cc.h  container_index.h  conversions.h  cxz_array.cc.h  cxz_array.h  cxz_array_base.cc.h  cxz_array_base.h  cxz_assert.h  cxz_darray.h  cxz_darray_base.cc.h  cxz_darray_base.h  cxz_operation.cc.h  cxz_operation.h  dcontainer_index.cc.h  dcontainer_index.h  dynamic_operation.cc.h  dynamic_operation.h  expressions.cc.h  expressions.h  functional_array.cc.h  functional_array.h  functional_multi_array.cc.h  functional_multi_array.h  helper_tools.cc.h  helper_tools.h  high_level_operation.cc.h  high_level_operation.h  hl_cnorxz.h  hl_reg_ind.h  map_range.cc.h  (+19 more)
src/include/array/: aindex.cc.h  aindex.h  array.cc.h  array.h  array_base.cc.h  array_base.h  darray.cc.h  darray.h  darray_base.cc.h  darray_base.h  dcontainer_index.cc.h  dcontainer_index.h  marray.cc.h  marray.h  slice.cc.h  slice.h
src/include/base/: assert.h  base.cc.h  base.h  config.h  dtype.cc.h  dtype.h  intrin.h  isq.h  iter.cc.h  iter.h  macros.h  obj_handle.cc.h  obj_handle.h  to_string.cc.h  to_string.h  types.h  utils.h  uuid.h
src/include/extensions/: math.h
src/include/functional/: fundamental.h
src/include/memory/: allocator.cc.h  allocator.h  memcount.h  memory.cc.h  memory.h
src/include/operation/: basic_operations.cc.h  basic_operations.h  cxz_operation.cc.h  cxz_operation.h  dynamic_operation.cc.h  op_expressions.h  op_types.cc.h  op_types.h  op_utility.cc.h  op_utility.h  op_xpr.cc.h  op_xpr.h  operation.cc.h  operation.h
src/include/operation/extensions/: avx.cc.h  avx.h  extensions.cc.h  extensions.h  math.h  reg.cc.h  reg.h
src/include/ranges/: anonymous_range.h  container_range.h  crange.cc.h  crange.h  dindex.cc.h  dindex.h  dynamic_meta.cc.h  dynamic_meta.h  dynamic_range.cc.h  dynamic_range.h  eindex.cc.h  eindex.h  index_base.cc.h  index_base.h  index_format.cc.h  index_format.h  index_info.h  index_mul.cc.h  index_mul.h  index_pack.cc.h  index_pack.h  index_traits.h  index_type.h  index_utils.cc.h  index_utils.h  index_wrapper.cc.h  index_wrapper.h  lindex.cc.h  lindex.h  map_range.h  mrange.cc.h  mrange.h  multi_range.h  multi_range_factory_product_map.h  nrange.h  prange.cc.h  prange.h  range_base.cc.h  range_base.h  range_helper.h  (+26 more)
src/include/ranges/range_types/: classic_range.h  header.h  null_range.h  space_range.h  spin_range.h
src/include/ranges/xfor/: exttype.h  iloop.h  pos_type.cc.h  pos_type.h  vpos_type.cc.h  vpos_type.h  xfor.cc.h  xfor.h
src/include/ranges/xpr/: for.cc.h  for.h  index_id.cc.h  index_id.h  op_xpr.h  pos_type.cc.h  pos_type.h  xpr.cc.h  xpr.h  xpr_base.cc.h  xpr_base.h
src/include/runtime/: COMMENT
src/include/statics/: static_for.h  traits.h
src/include/utils/: helper_tools.h
src/include/xfor/: exttype.h  for_type.h  for_utils.h  iloop.h  xfor.h
src/include/xpr/: acc_xpr.cc.h  acc_xpr.h  buf_xpr.cc.h  buf_xpr.h  for.cc.h  for.h  func.cc.h  func.h  index_id.cc.h  index_id.h  map_xpr.cc.h  map_xpr.h  op_xpr.cc.h  pos_type.cc.h  pos_type.h  racc_xpr.cc.h  racc_xpr.h  vpos_type.cc.h  vpos_type.h  xfor.h  xpr.cc.h  xpr.h  xpr_base.cc.h  xpr_base.h
src/lib/: CMakeLists.txt  dcontainer_index.cc  high_level_operation.cc  map_range_factory_product_map.cc  mk_hl_op.sh
src/lib/base/: config.cc  to_string.cc  uuid.cc
src/lib/memory/: memcount.cc
src/lib/ranges/: anonymous_range.cc  crange.cc  dindex.cc  dynamic_meta.cc  dynamic_range.cc  index_format.cc  index_info.cc  index_pack.cc  multi_range_factory_product_map.cc  nrange.cc  range_base.cc  type_map.cc  yindex.cc  yrange.cc
src/lib/ranges/range_types/: classic_range.cc  null_range.cc  space_range.cc  spin_range.cc
src/opt/: COMMENT
src/opt/cereal/: CMakeLists.txt
src/opt/cereal/include/: cer_array.cc.h  cer_base.h  cer_header.cc.h  cer_header.h  cer_ranges.cc.h  cer_type_register.cc.h  cnorxz_cereal.h  range_save_load.cc.h  range_save_load.h  utilities.cc.h  utilities.h
src/opt/cereal/tests/: CMakeLists.txt  cereal_unit_test.cc
src/opt/hdf5/: CMakeLists.txt
src/opt/hdf5/include/: cnorxz_hdf5.cc.h  cnorxz_hdf5.h  h5_content_base.cc.h  h5_content_base.h  h5_dataset.cc.h  h5_dataset.h  h5_file.h  h5_group.cc.h  h5_group.h  h5_table.cc.h  h5_table.h  h5_type_id.cc.h  h5_type_id.h  (+2 more)
src/opt/mpi/: CMakeLists.txt
src/opt/python/: COMMENT  setup.py.in
src/range_types/: header.h  spin_range.h
src/ranges/: container_range.h  index_base.h  index_info.cc  index_info.h  multi_range.h  range_base.cc  range_base.h  rbase_def.h  rpack_num.h  single_range.h  vindex_base.h
src/ranges/range_types/: spin_range.h
src/ranges/tests/: index_unit_test.cc  index_unit_test.cc~
src/tests/: CMakeLists.txt  array_unit_test.cc  darray_unit_test.cc  index_format_test.cc  l_unit_test.cc  ma_unit_test.cc  marray_unit_test.cc  numbers.txt  op2_unit_test.cc  op3_unit_test.cc  op4_unit_test.cc  op4_unit_test.h  op_perf_test.cc  op_unit_test.cc  operation_unit_test.cc  range_unit_test.cc  test_header.h  test_numbers.cc  test_numbers.h  xfor_unit_test.cc  xpr_unit_test.cc
src/tests/ranges/: anonymous_unit_test.cc  index_unit_test.cc
src/xfor/: exttype.h  for_params.h  for_utils.h  index_for_utils.h  xfor.h
(+76 files in other folders)
